[package]
name = "position-share"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }

[lints]
workspace = true

[dev-dependencies]
criterion = "0.5.1"
float-cmp = "0.10.0"

[[bench]]
name = "most_novel"
harness = false
